v0.1.3
Customisation panel working, looking at running more than one sim